--- a/index-1.html
+++ b/index-1.html
@@ -7,7 +7,7 @@
 
   <body> 
     
-    <h1> Hey Git </h1>>
+    <h1> Hey Git and GitHub </h1>>
     <p> Проверить версию - git -- version </p>
     <p> перейти выше cd и папку или файл куда переходим </p>
     <p> Посмотреть текущие папки ls </p>
