--- a/index-1.html
+++ b/index-1.html
@@ -37,7 +37,10 @@
     <p> поменять имя/почту дописываем после user.name имя что будем использовать </p>
     
     <p> Регистрируемся на GitHub и git push все на GITHUB</p>
-    <p> </p>
+   
+    <p> 
+      JOIN
+    </p>
     <p> </p>
 
 
