--- a/index-1.html
+++ b/index-1.html
@@ -7,8 +7,9 @@
 
   <body> 
     
+    <Hello>
 
-    <h1> Hey Git and GitHub </h1>>
+    <h1> Hey Git and GitHub  </h1>>
     <p> Проверить версию - git -- version </p>
     <p> перейти выше cd и папку или файл куда переходим </p>
     <p> Посмотреть текущие папки ls </p>
