added info index1.html

--- a/index-1.html
+++ b/index-1.html
@@ -21,7 +21,8 @@
 
     <p> git commit -m"назв ветки"</p>
     Чем чаще делаем коммит тем больше мы можем вернуться назад.
-    <p> .gitignore  - игнорить файлы и папки</p>
+    <p> .gitignore  - добавляем в файл и папку кот игнорируем и потом git add .gitignore
+    / + название папки или название файла error.txt</p>
    
     <p> git branch - в какой ветке находимяс (мастер или др) </p>
     <p> git branch  test создание ветки test- </p>
