add git pull in html

--- a/index-1.html
+++ b/index-1.html
@@ -36,14 +36,20 @@
     <p> git merge  - обединение с веткой</p>
     <p> git config --global config user.name (имя кот используем) </p>
     <p> git config --global config user.email (почта кот используем)</p>
-    <p> поменять имя/почту дописываем после user.name имя что будем использовать </p>
+    <p> поменять имя/почту дописываем после user.name + имя в кавичках 
+        " " - что будем использовать </p>
     
-    <p> Регистрируемся на GitHub и git push все на GITHUB</p>
-   
-    <p> 
-      JOIN
-    </p>
-    <p> </p>
+    <p> Регистрируемся на GitHub</p> 
+
+    <p> git push отправляем все что на компе на локал репозиторий</p>
+
+   <p> создаем  нов файл с помощью mkdir + название новой папки New </p>
+
+   <p> Во вновь соданую папку копируем 
+       git clone + адрес из репозитория(https...)</p>
+
+    <p> Перед началом работ в страой папке обязательно делаем 
+         git pull чтоб скопировать изменения в папке New</p>
 
 
 
